24 Feb 2002 Fixes for CLMH, LCTLG and CVBG - Jan Jaeger
24 Feb 2002 Updates for cckd - Greg Smith
22 Feb 2002 IODELAY defaults to `800' if `OSTAILOR LINUX' - Greg Smith
22 Feb 2002 IODELAY kludge for linux - Greg Smith
22 Feb 2002 Allow comments in hercules.rc file (start with #) - Paul Leisy
22 Feb 2002 Correct BFP behavior in GUEST mode - Paul Leisy
22 Feb 2002 Fix missing PER in GUEST mode when HOST rupt icept - Paul Leisy
20 Feb 2002 Print to pipe - Roger Bowler
19 Feb 2002 Fix pending interrupts on other cpus channelset - Jan Jaeger
15 Feb 2002 Fix interval timer state retention - Jan Jaeger
13 Feb 2002 Fix TS intercept test - Paul Leisy
13 Feb 2002 Fix TXA for HOST PIC 04 fault on GUEST stack access - Paul Leisy
13 Feb 2002 Throw out Store PER when merged with null/supr rupts - Paul Leisy
13 Feb 2002 Make CS, CDS, CSP behave consistently: always store - Paul Leisy
11 Feb 2002 ISK, SSK missing 2k/4k check in 370 native - Paul Leisy
11 Feb 2002 Fix SIGP Initial Program Reset (S/370) - Jan Jaeger
08 Feb 2002 Fix RRB in 370 guest - Paul Leisy
06 Feb 2002 Fix cckdcdsk space/recovery/gap table malloc() - Greg Smith
05 Feb 2002 dasdinit utility support for specifying alternate cylinders - Fish
05 Feb 2002 dasdinit utility support for most every device type - Fish
05 Feb 2002 Asm assists for memory synchronization - Greg Smith
04 Feb 2002 Fix Ifetch PER flag in State Desc, Fix LCTL intercepts - Paul Leisy
04 Feb 2002 Fix very minor memory leaks in sockdev logic - Fish
03 Feb 2002 Close hercules configuration file after processing - Volker Bandke
03 Feb 2002 Added PGMPRDOS config parameter - Jay Maynard
03 Feb 2002 Performance tweaks - Greg Smith
01 Feb 2002 CTCI-W32 (Win32 CTCA protocol using WinPcap) - Fish
31 Jan 2002 Fix PER in guest for OPTION_CPU_UNROLL - Paul Leisy
30 Jan 2002 Fix SIE validity checks and intercepts - Paul Leisy
29 Jan 2002 Fix pending I/O interrupt when enabling I/O subclass - Jan Jaeger