@@ -1,3 +1,4 @@
+24 Feb 2002 XSCH now removes i/o requests from the i/o queue - Jan Jaeger
 24 Feb 2002 Fixes for CLMH, LCTLG and CVBG - Jan Jaeger
 24 Feb 2002 Updates for cckd - Greg Smith
 22 Feb 2002 IODELAY defaults to `800' if `OSTAILOR LINUX' - Greg Smith
